--- a/tilemap_editor.html
+++ b/tilemap_editor.html
@@ -1,12 +1,24 @@
 <html>
 <head>
 	<title>Tilemap Editor</title>
-	<script src = "jquery.js"/>
-	<script src = "canvas.js"/>
-	<script src = "sprite.js"/>
-	<script src = "world.js"/>
+	<script src = "jquery.js" type = "text/javascript"></script>
+	<script src = "canvas.js" type = "text/javascript"></script>
+	<script src = "sprite.js" type = "text/javascript"></script>
+	<script src = "world.js" type = "text/javascript"></script>
 
 	<script language = "javascript">
+		var Context = null;
+
+		var Wall = new Sprite("wall_ig.png", false);
+		var Tile = new Sprite("nice_tiles.png", false);
+
+		$(document).ready(function(){
+			Canvas = new HTML("game", 640, 480)
+		});
+
+		$(window).load(function(){
+			Wall.draw(0,0);
+		});
 
 	</script>
 </head>
