--- a/branch.html
+++ b/branch.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Basic Model</title>
 	<link rel="stylesheet" type="text/css" href="./branch.css">
+</script>
 </head>
 
 <body onkeydown = "KeyPresser(event)">
