--- a/branch.html
+++ b/branch.html
@@ -7,7 +7,7 @@
 </head>
 
 <body onkeydown = "KeyPresser(event)">
-	<div class="map">
+	<div id="map">
 		<img id="sprite" src="file:///Users/IMG_3886.jpg">
 	</div>
 
