--- a/branch.html
+++ b/branch.html
@@ -8,7 +8,7 @@
 
 <body onkeydown = "KeyPresser(event)">
 	<div id="map">
-		<img id="sprite" src="file:///Users/IMG_3886.jpg">
+		<img id="sprite" src="./IMG_3886.jpg">
 	</div>
 
 	<script type="text/javascript" src="./branch.js"></script>
