--- a/branch.html
+++ b/branch.html
@@ -10,7 +10,8 @@
 	<div id="map">
 		<img id="sprite" src="./IMG_3886.jpg">
 	</div>
-
+	<div id="message">
+	</div>
 	<script type="text/javascript" src="./branch.js"></script>
 </body>
 
