added point collection stuffses

--- a/branch.html
+++ b/branch.html
@@ -7,16 +7,13 @@
 </head>
 
 <body onkeydown = "KeyPresser(event)">
-	<div id="infobar">
-		<img src="./IMG_3886.jpg" style="width: 50px; height: 50px;">
-	</div>
 
 	<div id="map">
 		<img id="sprite" src="./IMG_3886.jpg">
 	</div>
 
-	<div id="message">
-	</div>
+	<p id="swagtext"></p>
+	<p><span id="points"></span>/3</p>
 	<script type="text/javascript" src="./branch.js"></script>
 </body>
 
