--- a/branch.html
+++ b/branch.html
@@ -12,8 +12,7 @@
 		<img id="sprite" src="./IMG_3886.jpg">
 	</div>
 
-	<p id="swagtext"></p>
-	<p><span id="points"></span>/3</p>
+	<p id="swagtext"></p><span><span id="points"></span>/3</span>
 	<script type="text/javascript" src="./branch.js"></script>
 </body>
 
